--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,4 +29,8 @@ jobs:
           disable-lto: true
           nethunter: true
           anykernel3: true
+          ccache: true
+          nethunter-patch: true
+          lxc: true
+          lxc-patch: true
 
