--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
           nethunter: true
           anykernel3: true
           ccache: true
+          extra-cmd: llvm=true
           lxc: true
           lxc-patch: true
 
